// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatAddedIssues nonrating issues adding new returns correctly formatted issues 1`] = `
Array [
  Object {
    "beforeAma": false,
    "correctionType": undefined,
    "date": "2020-05-07",
    "decisionDate": 2020-05-07T00:00:00.000Z,
    "decisionIssueId": null,
    "editable": true,
    "editedDescription": undefined,
    "eligibleForSocOptIn": undefined,
    "eligibleForSocOptInWithExemption": undefined,
    "endProductCleared": null,
    "endProductCode": null,
    "examRequested": null,
    "id": null,
    "index": 0,
    "ineligibleReason": null,
    "notes": null,
    "rampClaimId": null,
    "ratingDecisionReferenceId": null,
    "ratingIssueReferenceId": "def456",
    "sourceReviewType": undefined,
    "text": "PTSD denied",
    "timely": undefined,
    "titleOfActiveReview": null,
    "untimelyExemption": undefined,
    "untimelyExemptionCovid": undefined,
    "untimelyExemptionNotes": undefined,
    "vacolsId": null,
    "vacolsIssue": null,
    "vacolsSequenceId": null,
    "withdrawalDate": null,
    "withdrawalPending": undefined,
  },
  Object {
    "beforeAma": false,
    "benefitType": undefined,
    "category": "Military Retired Pay",
    "correctionType": undefined,
    "date": "2020-04-27",
    "decisionIssueId": null,
    "decisionReviewTitle": "Appeal",
    "editable": true,
    "editedDescription": undefined,
    "eligibleForSocOptIn": undefined,
    "eligibleForSocOptInWithExemption": undefined,
    "endProductCleared": null,
    "endProductCode": null,
    "examRequested": null,
    "id": null,
    "index": 1,
    "ineligibleReason": null,
    "text": "Military Retired Pay - nonrating description",
    "timely": undefined,
    "untimelyExemption": undefined,
    "untimelyExemptionCovid": undefined,
    "untimelyExemptionNotes": undefined,
    "vacolsId": null,
    "vacolsIssue": null,
    "vacolsSequenceId": null,
    "withdrawalDate": null,
    "withdrawalPending": undefined,
  },
]
`;

exports[`formatAddedIssues nonrating issues editing existing returns correctly formatted issues 1`] = `
Array [
  Object {
    "beforeAma": false,
    "correctionType": undefined,
    "date": "2020-05-07",
    "decisionDate": 2020-05-07T00:00:00.000Z,
    "decisionIssueId": null,
    "editable": true,
    "editedDescription": undefined,
    "eligibleForSocOptIn": undefined,
    "eligibleForSocOptInWithExemption": undefined,
    "endProductCleared": null,
    "endProductCode": null,
    "examRequested": null,
    "id": "2",
    "index": 0,
    "ineligibleReason": null,
    "notes": null,
    "rampClaimId": null,
    "ratingDecisionReferenceId": null,
    "ratingIssueReferenceId": "def456",
    "sourceReviewType": undefined,
    "text": "PTSD denied",
    "timely": undefined,
    "titleOfActiveReview": null,
    "untimelyExemption": undefined,
    "untimelyExemptionCovid": undefined,
    "untimelyExemptionNotes": undefined,
    "vacolsId": null,
    "vacolsIssue": null,
    "vacolsSequenceId": null,
    "withdrawalDate": null,
    "withdrawalPending": undefined,
  },
  Object {
    "beforeAma": false,
    "benefitType": undefined,
    "category": "Military Retired Pay",
    "correctionType": undefined,
    "date": "2020-04-27",
    "decisionIssueId": null,
    "decisionReviewTitle": "Appeal",
    "editable": true,
    "editedDescription": undefined,
    "eligibleForSocOptIn": undefined,
    "eligibleForSocOptInWithExemption": undefined,
    "endProductCleared": null,
    "endProductCode": null,
    "examRequested": null,
    "id": "1",
    "index": 1,
    "ineligibleReason": null,
    "text": "Military Retired Pay - nonrating description",
    "timely": undefined,
    "untimelyExemption": undefined,
    "untimelyExemptionCovid": undefined,
    "untimelyExemptionNotes": undefined,
    "vacolsId": null,
    "vacolsIssue": null,
    "vacolsSequenceId": null,
    "withdrawalDate": null,
    "withdrawalPending": undefined,
  },
]
`;
